# trueframe-ai

./: .gitignore  README.md
client/: README.md  package-lock.json  package.json
client/app/: globals.css  page.tsx
client/app/demo/: page.tsx
server/: README.md  pyproject.toml
server/app/: inference.py  main.py  routes.py  schemas.py
server/configs/: settings.py  training.yaml
server/logs/: training_log.txt
server/src/evaluation/: evaluate_model.py  metrics.py
server/src/preprocessing/: extract_frames.py  transforms.py
server/src/training/: dataset.py  model.py  train_model.py
