[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "scikit-learn>=1.3.0",
    "opencv-python>=4.8.0.76",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.1",
]
